--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "passport": "^0.3.2",
     "passport-jwt": "^2.2.1",
     "passport-local": "^1.0.0",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "uuid": "^3.0.1"
   }
 }
